todoapps/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: volume-test
  annotations:
    tailscale.com/expose: "true"
spec:
  selector:
    app: volume-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
