todoapps/hello-world/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: volume-test
  annotations:
    tailscale.com/funnel: "true"
spec:
  defaultBackend:
    service:
      name: volume-test
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - volume-test
